<resources>
    <string name="app_name">smart city</string>
    <string name="authentication_title">Authentication</string>
    <string name="mail_address_label">Mail address</string>
    <string name="password_label">Password</string>
    <string name="sign_in_btn_text">Sign in</string>
    <string name="sign_up_btn_text">Sign up</string>
    <string name="authenticationAPI">https://smartcityapi20200414094628.azurewebsites.net/api/authentication</string>
    <string name="invalid_credentials_text">Authentification error : invalid credentials</string>
    <string name="email_hint">Ex : email@mail.com</string>
    <string name="email_autofill">email@mail.com</string>
    <string name="password_hint">Ex : password</string>
    <string name="registration_title">Registration</string>
    <string name="male_label">male</string>
    <string name="female_label">female</string>
    <string name="first_name_label">First name</string>
    <string name="last_name_label">Last name</string>
    <string name="date_of_birth_label">Date of birth</string>
    <string name="gender_label">Gender</string>
    <string name="town">Town</string>
    <string name="town_label">Town</string>
    <string name="address">Address</string>
    <string name="register_btn_text">Register</string>
    <string name="registration_message_text">Utilisateur enregistré</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_list_title">My actuality</string>

    <!--    this correspond to profile settings -->
    <string name="profile_settings">Profile </string>


    <string name="interest_settings">Interest </string>
    <string name="user_last_name">Last Name</string>
    <string name="user_first_name">First Name</string>
    <string name="user_email">Email</string>
    <string name="user_first_name_hint">First Name</string>
    <string name="user_last_name_hint">Last Name</string>
    <string name="user_email_hint">Email</string>
    <string name="user_password_hint">Password</string>
    <string name="user_town_hint">Town</string>
    <string name="user_address_hint">Address</string>
    <string name="user_profile_submit_button_text">Submit</string>
    <string name="interest_settings_submit_button">Save</string>
    <string name="no_service_activated_status">No services activated. You can activate services in the tab \'services\' in settings menu.</string>
    <string name="create_network_name">Network Name</string>
    <string name="create_network_description">Description</string>
    <string name="submit">Submit</string>
    <string name="subscribe">Subscribe</string>
    <string name="publish">Publish</string>
    <string name="publish_title">Publication_title</string>
    <string name="publication_description">Publication Content</string>
    <string name="subscribe_btn_text">Subscribe</string>
    <string name="validate_publication">Valider</string>
    <string name="create_agenda">Create An Agenda</string>
    <string name="temperature">temperature</string>
    <string name="humidity">"humidity : "</string>
    <string name="degree">\u00B0 C</string>
    <string name="api_key" translatable="false">AIzaSyDlN-BwlBJLee5RjJmSKIdNpYPRKrdu0Xg</string>
    <string name="validate_network_edition">Validate</string>
    <string name="admin_network_btn_text">Administration</string>
    <string name="accept_subscription">Accept</string>
    <string name="reject_subscription">Reject</string>
    <string name="subscription_requests_text">Subscription requests</string>
    <string name="directory_title">Trades directory</string>
    <string name="trade_offers_title">Offers</string>
</resources>
