<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="60dp"
    android:layout_marginTop="100dp"
    android:layout_marginRight="60dp"
    android:layout_marginBottom="100dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/AuthenticationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/authentication_title"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/invalidCredentialsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:text="@string/invalid_credentials_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mailAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/mail_address_label"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/mailAddressField"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:inputType="textEmailAddress"
            android:text=""
            android:hint="@string/email_hint"
            android:autofillHints=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/password_label"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:autofillHints=""/>
    </LinearLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_in_btn_text" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FFFFFF"
        android:text="@string/sign_up_btn_text" />

</LinearLayout>