<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="60dp"
    android:layout_marginTop="100dp"
    android:layout_marginRight="60dp"
    android:layout_marginBottom="100dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/AuthenticationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/registration_title"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/registrationMessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:text="@string/registration_message_text" />

    <TextView
        android:id="@+id/MailAddressLabelRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:text="@string/mail_address_label"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/mailAddressFieldRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text=""
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/passwordLabelRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:text="@string/password_label"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordFieldRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/firstNameLabelRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:text="@string/first_name_label"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/firstNameFieldRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/lastNameLabelRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:text="@string/last_name_label"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/lastNameFieldRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/dateOfBirthLabelRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:text="@string/date_of_birth_label"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dateOfBirthFieldRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="date"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/genderLabelRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:text="@string/gender_label"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/genderRadioGroupRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1" >

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/male_label"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_label"
            android:buttonTint="#FFFFFF"
            android:textColor="#FFFFFF"/>
    </RadioGroup>
    <TextView
        android:id="@+id/townLabelRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:text="@string/town_label"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/townFieldRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/addressLabelRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:text="@string/address"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/addressFieldRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/register_btn_text" />
</LinearLayout>