<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.ProfileSettingsFragment"
    android:orientation="vertical"
    android:paddingBottom="100dp"
        >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/avatar_man"
        android:layout_marginBottom="20dp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="Modify your profile settings"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/updateStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:id="@+id/user_profile_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"

        >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_first_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_first_name_hint"
                app:endIconMode="clear_text"
                 >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_last_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_last_name_hint"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_town_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_town_hint"
                app:endIconMode="clear_text"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_town"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_address_hint"
                    app:endIconMode="clear_text"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email_hint"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password_hint"
                 app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/profile_settings_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_submit_button_text"
                android:textSize="15sp"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_gravity="center_horizontal"
                />


    </LinearLayout>

</LinearLayout>
</ScrollView>