<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CreateNetworkSettingsFragment"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/network_creation_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
<!--        just a circular image view-->
        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/upload_network_image"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="2"
            android:src="@mipmap/camera_icon_round"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFF"/>


        <com.google.android.material.textfield.TextInputLayout
            android:paddingLeft="20dp"
            android:id="@+id/user_first_name_layout"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:hint="@string/create_network_name"
            app:endIconMode="clear_text"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/network_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_network_description"
            app:endIconMode="clear_text"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/network_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button

            android:layout_marginTop="50dp"
            android:id="@+id/network_creation_settings_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_submit_button_text"
            android:textSize="15sp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>


</LinearLayout>