<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.NetworkDetailsFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/network_details_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:src="@mipmap/account_icon"
            />

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/network_details_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Name of Network"
                android:textSize="25sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/network_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description of Network"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/toggle_publish_form"
        android:layout_width="150sp"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:text="@string/publish"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/publication_form"
        >
        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/account_icon"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:hint="@string/publish_title"
                app:endIconMode="clear_text"
                android:layout_weight="5"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/publication_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/publication_description"
            app:endIconMode="clear_text"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/publication_description"
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:inputType="textMultiLine|text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate_publication"
            android:layout_gravity="center"
            android:shadowRadius="10"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/publication_list_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="" />

    <ListView
        android:id="@+id/network_details_publication_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>
</LinearLayout>